Fixed some layout problems

--- a/frontend-friends/src/components/piechartGroup/piechartGroup.scss
+++ b/frontend-friends/src/components/piechartGroup/piechartGroup.scss
@@ -1,14 +1,12 @@
 @use '../../style/colors';
+@use "../../style/margins.scss";
+
 .pie-chart-container{
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    padding: margins.$margin-md;
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(3, 400px);
+    grid-template-columns: repeat(2, 50%);
     flex-wrap: wrap;
     background-color: white;
 }
